@@ -1,3 +1,7 @@
+2013-08-23  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
+	* new-features.xml (ov-new1.7.25): Change wording.
+
 2013-08-23  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.xml (ov-new1.7.25): Add new section.
